--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Geostatistics
 email: bryanlzhou@gmail.com
-description:
+description: ""
 baseurl:  # the subpath of your site, e.g. /blog
 url: https://bryanlizhou.github.io # the base hostname & protocol for your site
 author: Bryan Zhou
